Fixed modal tabs spacing + added more spacing between sidebar bottom buttons and attachments list

--- a/app/react/App/scss/modules/_attachments.scss
+++ b/app/react/App/scss/modules/_attachments.scss
@@ -205,3 +205,7 @@ label.add:focus-within {
     }
   }
 }
+
+.attachments-list-parent {
+  margin-bottom: 64px;
+}
